update all the codes

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <h2>Work</h2>
             <span>
                 <section class="card">
-                    <h4>work1</h4>
-                    <a href="dsadsa"><img src="../Challenge2-coding/assets/pics/1.jpg" alt="camera"/></a>
+                    <h4>Challenge1-website</h4>
+                    <a href="https://bleachevil.github.io/Challenge1-coding/"><img src="../Challenge2-coding/assets/pics/1.jpg" alt="camera"/></a>
                   </section>
                   <section class="card">
                     <h4>work2</h4>
