Upadte all the code

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#section2">Work</a>
                 </li>
                 <li> 
-                    <a href="#section3">Contract me</a>
+                    <a href="#section3">Contact me</a>
                 </li>
                 <li> 
                     <a href="#section4">Resume</a>
